# bevy-sandbox

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs  decode_saves.sh  win.sh
.zed/: settings.json
assets/: basic.ldtk  edge.tx  example.tmx  grass_walls.tsx  simple_figure.tsx  simple_figure.tx
assets/tiled/: tiled.tiled-project  tiled.tiled-session
assets/tiled/maps/: example.tmx  open.tmx
assets/tiled/templates/: left_elbow.tx  right_elbow.tx
assets/tiled/tilesets/: grass_walls.tsx
examples/: drawing.rs  empty.rs  ldtk.rs  ldtk_entities.rs  obstacle.rs  pathfinding.rs  player.rs  tiled.rs
proto/: network.proto  save.proto
src/: ai.rs  ball.rs  camera.rs  core.rs  costmap.rs  debug_display.rs  ecs.rs  fps.rs  game_state.rs  health.rs  input.rs  lib.rs  main.rs  menu.rs  obstacle.rs  pathfinding.rs  pathfollowing.rs  physics.rs  save.rs  simple_figure.rs  testing.rs  tie_man.rs  tiled.rs  utils.rs
src/net/: guest.rs  host.rs  mod.rs  sync.rs
tests/: test_ball.rs  test_fuzz.rs  test_game_state.rs  test_health.rs  test_input.rs  test_interpolation.rs  test_net.rs  test_sync.rs
tests/common/: mod.rs
