[package]
name = "bevy_sandbox"
version = "0.2.0"
authors = ["Adam Aposhian <aposhian.dev@gmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.6"
benimator = "^1"
bevy_rapier2d = "^0.12"
# Workaround for https://github.com/dimforge/bevy_rapier/issues/175
rapier2d = "=0.12.0-alpha.0"
serde_json = "^1.0"
pathfinding = "^2.2"
bevy_prototype_lyon = "^0.4"
lyon_tessellation = "0.17.10"
tiled = { git = "https://github.com/aposhian/rs-tiled.git", branch = "fix-templates" }
bevy_ecs_tilemap = "0.5"