[package]
name = "bevy_sandbox"
version = "0.3.0"
authors = ["Adam Aposhian <aposhian.dev@gmail.com>"]
edition = "2021"

[dependencies]
bevy = "0.7"
benimator = "3"
bevy_rapier2d = "0.15"
serde_json = "1.0"
pathfinding = "2.2"
bevy_prototype_lyon = "0.5"
lyon_tessellation = "0.17"
tiled = "0.10.2"
bevy_ecs_tilemap = "0.6"