[package]
name = "bevy_sandbox"
version = "0.3.0"
authors = ["Adam Aposhian <aposhian.dev@gmail.com>"]
edition = "2021"

[features]
physics_debug = []
fps_display = []
path_debug = []

[dependencies]
bevy = "0.18"
avian2d = "0.5"
bevy_prototype_lyon = "0.16"
bevy_ecs_tilemap = "0.18"
pathfinding = "4"
tiled = "0.15"
serde_json = "1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
